<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

  <Button
      android:id="@+id/h1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/h1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.118"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView9"
      app:layout_constraintVertical_bias="0.002" />

  <ImageView
      android:id="@+id/imageView8"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginTop="100dp"
      android:layout_marginEnd="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ebook2" />

  <Button
      android:id="@+id/h2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/h2"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.833"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView8"
      app:layout_constraintVertical_bias="0.002" />

  <ImageView
      android:id="@+id/imageView9"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="100dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/elearn1" />

  <ImageView
      android:id="@+id/imageView12"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="56dp"
      android:layout_marginBottom="172dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/h1"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/staff" />

  <ImageView
      android:id="@+id/imageView13"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginStart="63dp"
      android:layout_marginTop="56dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="172dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/imageView12"
      app:layout_constraintTop_toBottomOf="@+id/h2"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/care" />

  <Button
      android:id="@+id/h3"
      android:layout_width="132dp"
      android:layout_height="53dp"
      android:layout_marginTop="10dp"
      android:text="@string/h3"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.121"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView12"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/h4"
      android:layout_width="130dp"
      android:layout_height="55dp"
      android:layout_marginTop="10dp"
      android:text="@string/h4"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.879"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView13"
      app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>